moromoro fix and rooting

--- a/app/views/blogs/_blog.html.erb
+++ b/app/views/blogs/_blog.html.erb
@@ -1,11 +1,11 @@
 <div id="<%= dom_id blog %>">
   <p>
-    <strong>Title:</strong>
+    <strong><%= t("title") %>:</strong>
     <%= blog.title %>
   </p>
 
   <p>
-    <strong>Content:</strong>
+    <strong><%= t("content") %>:</strong>
     <%= blog.content %>
   </p>
 
